--- a/Tesis_Escrito/TeX_files/Bibliography.bib
+++ b/Tesis_Escrito/TeX_files/Bibliography.bib
@@ -225,3 +225,11 @@
 	year={2012},
 	organization={PMLR}
 }
+
+@misc{ enwiki:1176088789,
+	author = "{Wikipedia contributors}",
+	title = "Kolmogorov extension theorem --- {Wikipedia}{,} The Free Encyclopedia",
+	year = "2023",
+	url = "https://en.wikipedia.org/w/index.php?title=Kolmogorov_extension_theorem&oldid=1176088789",
+	note = "[Online; accessed 25-September-2023]"
+}
