--- a/Tesis_Escrito/TeX_files/BASS.tex
+++ b/Tesis_Escrito/TeX_files/BASS.tex
@@ -1,6 +1,6 @@
 \chapter{BASS and their Origins}
 
-The main proposal in this work is the use of a BASS model as the surrogate model in the framework of Bayesian Optimization rather than a traditional Gaussian Process. To understand this method and why it is useful for this purpose, we develop first the theory that lead to the construction of this method, and then explain its behaviour in some detail. 
+The main proposal in this work is the use of a BASS model as the surrogate model in the framework of Bayesian Optimization rather than a traditional Gaussian Process or any of the alternatives already discussed. To understand this method and why it is useful for this purpose, we develop first the theory that lead to the construction of this method, and then explain its behaviour in some detail. 
 
 As with most other algorithms used for regression tasks, BASS is built upon a rich history of work that was previously done in the field. It begins with CART and decision trees, which MARS models are based on, and in turn BMARS (Bayesian MARS) uses the same model form as MARS but builds the model using the traditional Bayesian approach of defining a prior and constructing from there. Finally, BASS is a specific case of the BMARS model. This is much more clear when viewed as a diagram, as shown in the following figure. 
 
@@ -155,3 +155,22 @@ zero and one. We model $y_i$ as
 
 The only difference between this setup and that of MARS and BMARS is the inclusion of the constant $g_{km}$ in each element of the tensor product. This term is $g_{km}=[s_{km}(\boldsymbol{x}_{v_{km}} - t_{km}) ]^\alpha_+$, where $s_{km} \in \{-1,1\}$ is referred to as the sign, $t_{km}\in [0,1]$ is a knot, $v_{km}$ selects a variable, $K_m$ is the degree of interaction, and $\alpha$ determines the degree of the polynomial splines. This normalizes the basis functions so that the basis coefficients $a_1, \ldots, a_M$ are on the same scale, making computations more stable.
 
+\section{BASS Models as Surrogates in Bayesian Optimization}
+
+With the discussions of the previous chapter and this one, we now have the tools to use the BASS model as a surrogate. There are a couple of decisions that we have to make though so that the model works properly, discussed in detail in this section. Namely, they are the starting points of the problem, the discretization of the function domain, and how we will handle uncertainty in points that have not yet been evaluated. 
+
+\subsection{Starting Point for the Algorithm}
+
+One common problem with BO is the cold start problem. Basically, it is very difficult for the system to draw inference or make predictions at the beginning of iterations because it simply has no relevant information. Another way of saying this is that the prior in this case is uniform (or discrete uniform depending on the context) over the entire function domain, which is not good. A simple solution to this problem is to give the algorithm a set of starting points in the domain, this could be to either do a small grid search to start for a small number of iterations, or do a random search with the same objective. Having these few points, then the surrogate has enough information to properly decide a good next point to evaluate with the specific acquisition function selected. The next chapter concerns the experiments that were run to test the potency and viability of this model, and in it, different amounts of starting points are used. Needing the starting points is not something unique to BASS models though, as many other models (for example GPs) also have trouble with cold starts. For the experiments, we made sure to begin all of them on the same amount of already evaluated points, calculated at random. 
+
+\subsection{Discretization of the Function Domain}
+
+As with any numerical problem, one important step in designing the algorithm to solve it is the discretization of continuous variables. This process involves dividing the continuous input space into discrete intervals or points, enabling the algorithm to operate efficiently within a finite computational framework. The choice of discretization scheme can significantly impact the performance and convergence properties of the optimization process.
+
+One approach to discretization is to define a grid over the input space. This involves partitioning each dimension into a set of equally spaced points, forming a mesh that covers the entire domain. While grid-based discretization offers simplicity and uniformity, it will suffer from the curse of dimensionality, especially in high-dimensional spaces, where the number of grid points grows exponentially with dimensionality.
+
+The way we decided to discretize the space was using Latin Hypercube Sampling (LHS) \cite{mckay2000comparison}. LHS is a statistical sampling method used to generate a set of diverse and representative samples from a multidimensional probability distribution. It is particularly useful in optimization, where obtaining a set of samples that cover the entire parameter space evenly and efficiently is crucial. This method is better for this purpose than a simple grid search or a traditional pseudo-random sample of points generated through Monte Carlo methods. We do not go into too much detail into these methods as they are not the main point of this work, but the interested reader can look to the previously referenced \cite{mckay2000comparison} or \cite{stein1987large}. 
+
+\subsection{Uncertainty Estimation}
+
+One problem in selecting the BASS method as the surrogate compared to GPs is that it does not have a built in mechanism for determining the uncertainty of points outside of the ones already evaluated. This means that there is no real mechanism to use alongside the acquisition function to select the next best point to evaluate, the literal point of Bayesian Optimization. This might seem like a method-breaking problem, but thankfully, there are options to calculate this uncertainty. The approach we decide to take is a relatively simple one, where the uncertainty in the points that we have is directly proportional to how close it is to other points that have already been estimated. This means that at the end of the day, the sample space for the possible next points in the sequence (if they are continuous) are the midpoints between each value already evaluated. The weight that we give to these points is tunable as to give the user some control over exploration in the model or experimentation in regions already decided to be good, as will be seen in the next chapter with the hyperparameter choices of $\kappa$ and $\sigma$.
