--- a/Tesis_Escrito/main.tex
+++ b/Tesis_Escrito/main.tex
@@ -28,7 +28,10 @@
 \include{./TeX_files/Quote}
 \include{./TeX_files/GP}
 \include{./TeX_files/BO}
+\include{./TeX_files/SMBO}
 \include{./TeX_files/BASS}
+
+
 
 \backmatter
 % bibliography, glossary and index would go here.
