--- a/Tesis_Escrito/TeX_files/Bibliography.bib
+++ b/Tesis_Escrito/TeX_files/Bibliography.bib
@@ -233,3 +233,77 @@
 	url = "https://en.wikipedia.org/w/index.php?title=Kolmogorov_extension_theorem&oldid=1176088789",
 	note = "[Online; accessed 25-September-2023]"
 }
+
+@misc{ conceptualBO,
+	author = {Will Koehrsen},
+	title = {A Conceptual Explanation of Bayesian Hyperparameter Optimization for Machine Learning},
+	url = {\url{https://towardsdatascience.com/a-conceptual-explanation-of-bayesian-model-based-hyperparameter-optimization-for-machine-learning-b8172278050f}},
+	note = {Accessed: 15 Feb 2023},
+	year = {2018}
+}
+
+@article{wang2023recent,
+	title={Recent advances in Bayesian optimization},
+	author={Wang, Xilu and Jin, Yaochu and Schmitt, Sebastian and Olhofer, Markus},
+	journal={ACM Computing Surveys},
+	volume={55},
+	number={13s},
+	pages={1--36},
+	year={2023},
+	publisher={ACM New York, NY}
+}
+
+@article{bergstra2011algorithms,
+	title={Algorithms for hyper-parameter optimization},
+	author={Bergstra, James and Bardenet, R{\'e}mi and Bengio, Yoshua and K{\'e}gl, Bal{\'a}zs},
+	journal={Advances in neural information processing systems},
+	volume={24},
+	year={2011}
+}
+
+@article{grinsztajn2022tree,
+	title={Why do tree-based models still outperform deep learning on typical tabular data?},
+	author={Grinsztajn, L{\'e}o and Oyallon, Edouard and Varoquaux, Ga{\"e}l},
+	journal={Advances in Neural Information Processing Systems},
+	volume={35},
+	pages={507--520},
+	year={2022}
+}
+
+@article{mckay2000comparison,
+	title={A comparison of three methods for selecting values of input variables in the analysis of output from a computer code},
+	author={McKay, Michael D and Beckman, Richard J and Conover, William J},
+	journal={Technometrics},
+	volume={42},
+	number={1},
+	pages={55--61},
+	year={2000},
+	publisher={Taylor \& Francis}
+}
+
+@article{stein1987large,
+	title={Large sample properties of simulations using Latin hypercube sampling},
+	author={Stein, Michael},
+	journal={Technometrics},
+	volume={29},
+	number={2},
+	pages={143--151},
+	year={1987},
+	publisher={Taylor \& Francis}
+}
+
+@article{bergstra2012random,
+	title={Random search for hyper-parameter optimization.},
+	author={Bergstra, James and Bengio, Yoshua},
+	journal={Journal of machine learning research},
+	volume={13},
+	number={2},
+	year={2012}
+}
+
+@article{xiao2020efficient,
+	title={Efficient hyperparameter optimization in deep learning using a variable length genetic algorithm},
+	author={Xiao, Xueli and Yan, Ming and Basodi, Sunitha and Ji, Chunyan and Pan, Yi},
+	journal={arXiv preprint arXiv:2006.12703},
+	year={2020}
+}
