Small changes to new section.

--- a/Tesis_Escrito/TeX_files/Bibliography.bib
+++ b/Tesis_Escrito/TeX_files/Bibliography.bib
@@ -307,3 +307,9 @@
 	journal={arXiv preprint arXiv:2006.12703},
 	year={2020}
 }
+
+@MISC{simulationlib, 
+	author = {Surjanovic, S. and Bingham, D.}, 
+	title = {Virtual Library of Simulation Experiments: Test Functions and Datasets}, 
+	howpublished = {Retrieved August 25, 2024, from \url{http://www.sfu.ca/~ssurjano}} 
+}
