--- a/Tesis_Escrito/main.tex
+++ b/Tesis_Escrito/main.tex
@@ -6,6 +6,7 @@
 \usepackage{amsmath}
 \usepackage{mathtools}
 \usepackage{dirtytalk}
+\usepackage{url}
 
 % To be removed later, since these won't be used in the final version. 
 \usepackage{xcolor}
@@ -18,7 +19,7 @@
 
 \author{Adrian TJ}
 \title{BASS as a Surrogate Model for Bayesian Optimization}
-\date{September 2022}
+\date{INSERT DATE HERE WHEN DONE}
 
 \frontmatter
 \maketitle
@@ -30,7 +31,7 @@
 \include{./TeX_files/BO}
 \include{./TeX_files/SMBO}
 \include{./TeX_files/BASS}
-
+\include{./TeX_files/Experiment}
 
 
 \backmatter
